<resources>
    <string name="app_name">PickupAndroid</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="product_quantity">Cantidad: %1$s</string>
    <string name="unit_price">Precio unitario: %1$s</string>
    <string name="loggin_error">Hubo un error al iniciar sesion.</string>
    <string name="user_require">El usuario es requerido</string>
    <string name="email_format_error">Formato no valido</string>
    <string name="password_require">La contraseña es requerida</string>
    <string name="network_connection_lost">Se perdió la conexión a internet.</string>
    <string name="error_title">Error</string>
    <string name="ok_button_text">Aceptar</string>
    <string name="reload">Cargar Nuevamente</string>
    <string name="order_detail_error">No se pudo cargar orden</string>
    <string name="entregar">Entregar</string>
    <string name="confirmar">Confirmar</string>
    <string name="rechazar">Rechazar</string>
    <string name="nombre">Nombre:</string>
    <string name="telefono">Teléfono:</string>
    <string name="email">Email:</string>
    <string name="total">Total</string>
    <string name="cantidad">Cantidad: %1$s</string>
    <string name="num_serie_error">No se pudo cargar número de serie.</string>
    <string name="entregar_pedido">Entregar Pedido</string>
    <string name="seguro_que_desea_entregar_el_pedido">¿Seguro que desea Entregar el pedido?</string>
    <string name="cancelar">Cancelar</string>
    <string name="entregado">Entregado</string>
    <string name="rechazar_pedido">Rechazar Pedido</string>
    <string name="seguro_que_desea_rechazar_el_pedido">¿Seguro que desea rechazar el pedido?</string>
    <string name="cancelado">Cancelado</string>
    <string name="recahzar_pedido">Recahzar Pedido</string>
    <string name="error_al_cargar_ordenes">Error al cargar ordenes</string>
</resources>